<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyCallActivity">


    <Button
        android:id="@+id/ambulance"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="274dp"
        android:background="@color/white"
        android:drawableStart="@drawable/about_us"
        android:text="@string/call_ambulance"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-37dp" />


    <Button
        android:id="@+id/fire_service"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:drawableStart="@drawable/about_us"
        android:text="@string/call_fire_service"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/police"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/police"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="169dp"
        android:background="@color/white"
        android:drawableStart="@drawable/about_us"
        android:text="@string/call_police"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>